<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>api</groupId>
	<artifactId>app</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>Docker app</name>

	<packaging>pom</packaging>

	<modules>
		<module>film</module>
		<module>user</module>
		<module> group</module>
		<module>algorythmic_selector</module>
	</modules>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java-ee-api.version>8.0.1</java-ee-api.version>
		<version.thorntail>2.6.0.Final</version.thorntail>

		<failOnMissingWebXml>false</failOnMissingWebXml>

		<skip-docker-build>true</skip-docker-build>
		<dockerHost>tcp://localhost:2375</dockerHost>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.thorntail</groupId>
				<artifactId>bom</artifactId>
				<version>${version.thorntail}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>

			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20210307</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>8.0.24</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<configuration>
							<compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
						</configuration>
					</configuration>
				</plugin>
				<plugin>
					<groupId>io.thorntail</groupId>
					<artifactId>thorntail-maven-plugin</artifactId>
					<version>${version.thorntail}</version>
				</plugin>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>fabric8-maven-plugin</artifactId>
					<version>4.4.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<configuration>
					<webResources>
							<resource>
									<directory>$/film/src/main/webapp/WEB-INF</directory>
									<filtering>true</filtering>
									<targetPath>WEB-INF</targetPath>
									<includes>
											<include>**/xmlgateway-context.xml</include>
									 </includes>
							</resource>
					</webResources>
			</configuration>
			<plugin>
				<groupId>io.thorntail</groupId>
				<artifactId>thorntail-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>activate_windows</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<dockerHost>tcp://localhost:2375</dockerHost>
			</properties>
		</profile>
		<profile>
			<id>activation_unix</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<dockerHost>unix:///var/run/docker.sock</dockerHost>
			</properties>
		</profile>
		<profile>
			<id>package-docker-image</id>
			<build>
				<plugins>
					<plugin>
						<groupId>io.fabric8</groupId>
						<artifactId>fabric8-maven-plugin</artifactId>
						<configuration>
							<skip>${skip-docker-build}</skip>
							<useColor>true</useColor>
							<dockerHost>${dockerHost}</dockerHost>
							<images>
								<image>
									<name>%g/%a:%l</name>
									<run>
										<ports>
											<port>8080:8080</port>
										</ports>

										<extraHosts>
											tindfilm:129.194.10.130
										</extraHosts>

									</run>
									<build>
										<from>openjdk:11</from>
										<ports>
											<port>8080</port>
										</ports>
										<assembly>
											<basedir>/</basedir>
											<inline>
												<files>
													<file>
														<source>${project.build.directory}/${project.build.finalName}-thorntail.jar</source>
														<outputDirectory>/opt</outputDirectory>
													</file>
												</files>
											</inline>
										</assembly>
										<entryPoint>
											<shell>java -Djava.net.preferIPv4Stack=true -jar \
												/opt/${project.build.finalName}-thorntail.jar</shell>
										</entryPoint>
									</build>
								</image>
							</images>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>build</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
